if (SQL_HOME)
    if (SQL_LAYER STREQUAL mysql)
        set(STLIBPATH_SQL "${SQL_HOME}/lib/mysql")
        set(INCLUDES_SQL "${SQL_HOME}/include/mysql")
    else()
        set(STLIBPATH_SQL "${SQL_HOME}/lib")
        set(INCLUDES_SQL "${SQL_HOME}/include")
    endif()
    set(DEFAULT_PATH_OPTION NO_DEFAULT_PATHS)
endif()

if (SQL_LAYER STREQUAL "mysql")
    if (SQL_HOME STREQUAL "")
        list(APPEND STLIBPATH_SQL "/usr/lib/mysql")
        list(APPEND INCLUDES_SQL "/usr/include/mysql")
    endif()
    set(CXX_FLAGS_SQL -DUSE_MYSQL)
    set(LIB_SQL mysqlclient_r)
elseif (SQL_LAYER STREQUAL "psql")
    set(CXX_FLAGS_SQL -DUSE_PGSQL)
    set(LIB_SQL psql)
elseif (SQL_LAYER STREQUAL "oracle")
    set(CXX_FLAGS_SQL -DUSE_ORACLE)
    set(LIB_SQL clntsh)
else()
    message(FATAL_ERROR "Invalid SQL layer, must be one of [mysql, psql, oracle]")
endif()

find_library(${SQL_LIB_PATH}
    ${LIB_SQL}
    PATHS ${STLIBPATH_SQL}
    ${DEFAULT_PATH_OPTION})

add_library(sql UNKNOWN IMPORTED GLOBAL)
set_property(TARGET sql PROPERTY IMPORTED_LOCATION "${SQL_LIB_PATH}")
target_include_directories(sql INTERFACE ${INCLUDES_SQL})
target_compile_definitions(sql INTERFACE ${CXX_FLAGS_SQL})
set(SQL_LIB sql CACHE INTERNAL "")
